# android-conan-blog-post

./: .gitignore
app/: CMakeLists.txt  build.gradle  conanfile.txt
app/conan_build/: conaninfo.txt
app/conan_build_armeabi-v7a/: conanbuildinfo.cmake  conanbuildinfo.txt
app/conan_build_x86/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
app/src/androidTest/java/com/jfrog/myboostapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/jfrog/myboostapp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jfrog/myboostapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
